deployment-script/azure-kubernetes/gateway-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    buildVersion: "#{Build.BuildID}#"
    releaseVersion: "#{Release.ReleaseName}#"
spec:
  replicas: #{gatewayReplicas}#
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
        buildVersion: "#{Build.BuildID}#"
        releaseVersion: "#{Release.ReleaseName}#"
    spec:
      containers:
      - name: gateway
        image: gateway.azurecr.io/gateway-service:#{Build.BuildID}#
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 5
      imagePullSecrets:
      - name: gateway-azurecr
