deployment-script/azure-kubernetes/gateway-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    buildVersion: "#{Build.BuildID}#"
    releaseVersion: "#{Release.ReleaseName}#"
spec:
  selector:
    app: gateway
  ports:
  - port: 3000
    targetPort: 3000
  type: LoadBalancer

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: gateway-basic-auth
spec:
  tls:
  - hosts:
    - "#{GATEWAY_HOST_NAME}#"
    secretName: tls-bd-wildcard
  rules:
  - host: "#{GATEWAY_HOST_NAME}#"
    http:
      paths:
      - backend:
          serviceName: gateway-service
          servicePort: 3000
        path: /
